# Reversi

./: CMakeLists.txt  df
exe/: clientConfig.txt
src/client/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  Cell.cpp  Cell.h  Client.cpp  Client.h  Game.cpp  Game.h  GameFlow.cpp  GameFlow.h  GenericLogic.cpp  GenericLogic.h  HumanPlayer.cpp  HumanPlayer.h  Lobby.cpp  Lobby.h  Logic.h  Player.h  Structs.h  main.cpp  makefile
src/server/: Command.h  CommandManager.cpp  CommandManager.h  Controller.cpp  Controller.h  EndCommand.cpp  EndCommand.h  JoinCommand.cpp  JoinCommand.h  ListGamesCommand.cpp  ListGamesCommand.h  NoMoveCommand.cpp  NoMoveCommand.h  PlayCommand.cpp  PlayCommand.h  Server.cpp  Server.h  ServerStructs.h  StartCommand.cpp  StartCommand.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  main.cpp  makefile
